# visa-dispute-advisor

./: .env.example  AGENTS.md  CONVERSATION.md  PROMPTS.md  README.md  mcp_config.json  pyproject.toml
data/: dispute_cases.csv  warehouse.db
data/chroma/: chroma.sqlite3
scripts/: seed_merchants.py
src/visa_dispute_advisor/: chroma_store.py  ingest.py  server.py  sqlite_store.py
tests/: test_server_tools.py  test_sqlite_store.py
